# tinyhands

./: .gitignore  README.txt  build.microbit.sh  go.mod  go.sum  main.go
bluetooth/: build.microbitv2.sh  main.go
clockdisplay/: build.microbit.sh  build.picodisplay.sh  flash.picodisplay.sh  flashswd.picodisplay.sh  main.go
clocker/: build.microbit.sh  build.pico.sh  flash.microbit.sh  flash.pico.sh  main.go  microbit.go  pico.go
display/: README.md  dev.sh  display.py  display.unit
fader/: build.microbitv2.sh  main.go  pins_microbitv2.go  pins_pico.go  tables.go
neopixel/: build.microbitv2.sh  build.pico.sh  build.picobb.sh  flash.microbitv2.sh  flash.pico.sh  flash.picobb.sh  main.go  microbit.go  pico.go  picobb.go
pico/: CMakeLists.txt  main.c
rgbw/: build.microbitv2.sh  build.pico.sh  flash.microbitv2.sh  flash.pico.sh  main.go  microbit.go  pico.go
ringer/: flash.pico.sh  main.go
serial/: build.microbitv2.sh  main.go
twinkle/: build.pico.sh  flash.pico.sh  flash.picobb.sh  main.go  pico.go  picobb.go
uart/: main.go
